data/all_generated_tests/raw_wast_tests/call_EdgeCaseFailuresinbr_table_3767.wast
;; 6. **Test Description**: Define a function that is intended to be called but has an invalid type signature. Follow this with a `br_table` that directly relies on the return value resulting from the call. Observe if wizard_engine's `checkSignature(func.sig)` traps correctly.    - **Reasoning**: Cross-verifies type signature validation directly impacting subsequent `br_table` index handling.

(assert_invalid
  (module
    (func $callee (param i32 i32) (result i32) (i32.add (local.get 0) (local.get 1)))
    (func $caller (result i32)
      (call $callee (i32.const 1)) ;; Invalid call, missing 2nd parameter
      (br_table 0 1 (i32.const 0)))
  )
  "type mismatch"
)